--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -25,7 +25,7 @@
           <div class="nav-links">
             <ul>
               <li><a href="">what we do</a></li>
-              <li><a href="">our result</a></li>
+              <li><a href="">our results</a></li>
               <li><a href="">contact us</a></li>
             </ul>
           </div>
