--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -14,14 +14,15 @@
 
 <body>
     <section class="header">
-      <header>
-        <nav>
+    <header>
+      <nav>
+        <div class="container">
           <input type="checkbox" id="menu-toggle" />
           <label for="menu-toggle" class="menu-icon">
-            <span class="open">&#9776;</span>  
-            <span class="close">&times;</span> 
+            <span class="open">&#9776;</span>
+            <span class="close">&times;</span>
           </label>
-          <img src="./images/logo_headphones.png" alt="">
+          <img src="./images/logo_headphones.png" alt="Headphones Logo" />
           <div class="nav-links">
             <ul>
               <li><a href="">what we do</a></li>
@@ -29,16 +30,23 @@
               <li><a href="">contact us</a></li>
             </ul>
           </div>
-        </nav>
-      </header>
+        </div>
+      </nav>
+    </header>
 
+    <div class="container">
       <div class="text-box">
         <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
         <p class="txt-paragraph1">Lorem ipsum dolor set amet lorem ipsum dolor set</p>
         <button>CALL TO ACTION</button>
-        <p class="txt-paragraph2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <p class="txt-paragraph2">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut <br>labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in <br>voluptate velit esse cillum dolore eu fugiat
+          nulla pariatur.
+        </p>
       </div>
-
-    </section>
+    </div>
+  </section>
 </body>
 </html>
