designed a headphone homepage

--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="headphones, landing page, HTML, CSS, responsive design, ALX project" />
   <title>Headphones - Landing Page</title>
   <link rel="stylesheet" href="holberton_school-icon.css" />
-  <link rel="stylesheet" href="./1-styles.css" />
+  <link rel="stylesheet" href="./2-styles.css" />
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
 </head>
@@ -53,7 +53,6 @@
   <main>
     <section class="what-we-do">
       <div class="container">
-        <h1 class="ctn-title">What we do...</h1>
         <p class="ctn-paragraph">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut <br>labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>laboris nisi ut aliquip ex ea
@@ -76,6 +75,41 @@
           <div class="service-card">
             <span class="holberton_school-icon-ic_hearing icon"></span>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="result-ctn">
+      <div class="container1">
+        <h1>Our results speak for themselves</h1>
+        <p class="ctn-paragraph1">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut <br>labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in <br>voluptate velit esse cillum dolore eu fugiat
+          nulla pariatur.
+        </p>
+
+        <div class="results">
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
+          </div>
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
+          </div>
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
+          </div>
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
           </div>
         </div>
       </div>
