--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="headphones, landing page, HTML, CSS, responsive design, ALX project" />
   <title>Headphones - Landing Page</title>
   <link rel="stylesheet" href="holberton_school-icon.css" />
-  <link rel="stylesheet" href="./1-styles.css" />
+  <link rel="stylesheet" href="./4-styles.css" />
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
   <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
 </head>
@@ -81,6 +81,64 @@
       </div>
     </section>
 
+    <section class="result-ctn">
+      <div class="container1">
+        <h1>Our results speak for themselves</h1>
+        <p class="ctn-paragraph1">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut <br>labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <br>laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in <br>voluptate velit esse cillum dolore eu fugiat
+          nulla pariatur.
+        </p>
+
+        <div class="results">
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
+          </div>
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
+          </div>
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
+          </div>
+          <div class="result-card">
+            <img src="./images/pentagone.png" alt="">
+            <p class="result-para1">+2%</p>
+            <p class="result-para2">Lorem ipsum dolor</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container2">
+      <h1>Contact us</h1>
+      <form>
+        <input type="text" placeholder="Name">
+        <input type="email" placeholder="Email">
+        <textarea placeholder="Your message"></textarea>
+      </form>
+      <button>CALL TO ACTION</button>
+    </section>
   </main>
+
+  <footer>
+    <section class="footer-ctn">
+      <div class="footer-ctn1">
+        <img src="./images/logo_headphones.png" alt="logo">
+        <div class="font-ls">
+          <span class="holberton_school-icon-ic_facebook icon1"></span>
+          <span class="holberton_school-icon-ic_twitter icon1"></span>
+          <span class="holberton_school-icon-ic_instagram icon1"></span>
+        </div>
+      </div>
+      <p>©headphones 2020</p>
+    </section>
+  </footer>
 </body>
 </html>
